# drone-mapper

./: .gitignore  CMakeLists.txt  Comprehensive Development Plan.md  IMPLEMENTATION_SUMMARY.md  PHASE_4_FEATURES.md  README.md  UI_INTEGRATION_ANALYSIS.md  UI_INTEGRATION_CHECKLIST.md  UI_INTEGRATION_QUICK_REFERENCE.md  UI_INTEGRATION_STATUS_VISUAL.txt
docs/: ARCHITECTURE.md  COMPLETE_FEATURES_LIST.md  IMPLEMENTATION_SUMMARY.md  PHASE3B_COMPLETION_SUMMARY.md  PHASE3_FINAL_FEATURES_SUMMARY.md  SESSION_SUMMARY.md
include/app/: Application.h
include/core/: AltitudeSafetyChecker.h  BatteryManager.h  DatabaseManager.h  FlightPathOptimizer.h  ImageManager.h  Logger.h  MissionSimulator.h  MissionStatistics.h  NoFlyZoneChecker.h  ProjectExporter.h  ProjectManager.h  ReportGenerator.h  Settings.h  SunCalculator.h  WeatherService.h
include/geospatial/: CoordinateTransform.h  CoveragePatternGenerator.h  FlightPathCalculator.h  GeoUtils.h  KMZGenerator.h  WPMLWriter.h
include/models/: FlightPlan.h  GeospatialCoordinate.h  MissionParameters.h  Project.h  Waypoint.h
include/photogrammetry/: COLMAPIntegration.h  GPUDetector.h  ProcessingQueue.h  QualityEstimator.h
include/ui/: DrawingToolsWidget.h  FlightPlanningWidget.h  ImageGalleryWidget.h  MainWindow.h  MapBridge.h  MapWidget.h  MissionParametersDialog.h  PointCloudViewer.h  ProjectDashboard.h  ProjectExplorer.h  SimulationPreviewWidget.h  TerrainElevationViewer.h  WeatherWidget.h  WindOverlayWidget.h
resources/map/: map.html
src/app/: Application.cpp  CMakeLists.txt  main.cpp
src/core/: AltitudeSafetyChecker.cpp  BatteryManager.cpp  CMakeLists.txt  DatabaseManager.cpp  FlightPathOptimizer.cpp  ImageManager.cpp  Logger.cpp  MissionSimulator.cpp  MissionStatistics.cpp  NoFlyZoneChecker.cpp  ProjectExporter.cpp  ProjectManager.cpp  ReportGenerator.cpp  Settings.cpp  WeatherService.cpp
src/geospatial/: CMakeLists.txt  CoordinateTransform.cpp  CoveragePatternGenerator.cpp  FlightPathCalculator.cpp  GeoUtils.cpp  KMZGenerator.cpp  WPMLWriter.cpp
src/models/: CMakeLists.txt  FlightPlan.cpp  GeospatialCoordinate.cpp  MissionParameters.cpp  Project.cpp  Waypoint.cpp
src/photogrammetry/: CMakeLists.txt  COLMAPIntegration.cpp  ExportHandler.cpp  GPUDetector.cpp  ImageProcessor.cpp  MeshGenerator.cpp  OrthomosaicGenerator.cpp  PointCloudGenerator.cpp  ProcessingPipeline.cpp  ProcessingQueue.cpp  QualityEstimator.cpp
src/ui/: CMakeLists.txt  DrawingToolsWidget.cpp  FlightPlanningWidget.cpp  ImageGalleryWidget.cpp  MainWindow.cpp  MapBridge.cpp  MapWidget.cpp  MissionParametersDialog.cpp  PointCloudViewer.cpp  ProjectDashboard.cpp  ProjectExplorer.cpp  SimulationPreviewWidget.cpp  TerrainElevationViewer.cpp  WeatherWidget.cpp  WindOverlayWidget.cpp
